# AI-Khabari

./: README.md  app.py  backend.py  news_scraper.py  pyproject.toml  requirements.txt  utils.py
